# retrace

./: .gitignore  README.md  index.html  package-lock.json  package.json  retrace-spec.md  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
sidecar/: main.py  requirements.txt
sidecar/backends/: live.py  starvector.py
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: download_model.py  requirements.txt  sidecar.py
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: export.rs  image.rs  mod.rs  setup.rs  trace.rs  updater.rs
src-tauri/src/export/: eps.rs  mod.rs
src-tauri/src/setup/: installer.rs  mod.rs  system.rs  uv.rs
src-tauri/src/tracer/: custom.rs  live.rs  mod.rs  sidecar.rs  starvector.rs  vtracer.rs
src/lib/: types.ts
src/lib/components/: Canvas.svelte  Controls.svelte  SplashScreen.svelte  SplashScreen.test.ts  Titlebar.svelte  Toolbar.svelte  UpdateChecker.svelte
src/lib/components/settings/: BackendSetup.svelte  BackendSetup.test.ts  Settings.svelte  UpdateSettings.svelte
src/lib/stores/: backends.test.ts  backends.ts  preferences.ts  tracing.test.ts  tracing.ts  updater.ts
