[package]
name = "retrace"
version = "0.1.0"
description = "Re:Trace — open-source desktop image tracing application"
authors = []
edition = "2021"

[lib]
name = "retrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt"] }
vtracer = "0.6.5"
image = "0.23"
roxmltree = "0.21"
sysinfo = "0.33"
